--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/pico-w-ble-midi-lib"]
 	path = lib/pico-w-ble-midi-lib
 	url = https://github.com/rppicomidi/pico-w-ble-midi-lib.git
+[submodule "lib/usb_midi_host"]
+	path = lib/usb_midi_host
+	url = https://github.com/rppicomidi/usb_midi_host
