Make project easier to import with official Pico VS Code extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 set(target_name ble-midi2usbhost)
 set(PICO_BOARD pico_w)
 include (pico_sdk_import.cmake)
-project(${target_name})
+project(ble-midi2usbhost)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
@@ -11,10 +11,10 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/ring_buffer_lib)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/pico-w-ble-midi-lib)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/usb_midi_host)
 
-add_executable(${target_name}
+add_executable(ble-midi2usbhost
     ble-midi2usbhost.c
     )
-target_link_libraries(${target_name}
+target_link_libraries(ble-midi2usbhost
     pico_stdlib
     ble_midi_server_lib
     pico_btstack_cyw43
@@ -24,13 +24,13 @@ target_link_libraries(${target_name}
     tinyusb_board
     usb_midi_host_app_driver
     )
-target_include_directories(${target_name} PRIVATE
+target_include_directories(ble-midi2usbhost PRIVATE
     ${CMAKE_CURRENT_LIST_DIR} # For btstack config, etc.
     )
-pico_enable_stdio_uart(${target_name} 1)
-target_link_options(${target_name} PRIVATE -Xlinker --print-memory-usage)
-target_compile_options(${target_name} PRIVATE -Wall -Wextra)
-pico_btstack_make_gatt_header(${target_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/ble-midi2usbhost.gatt" "${CMAKE_CURRENT_LIST_DIR}/lib/pico-w-ble-midi-lib")
+pico_enable_stdio_uart(ble-midi2usbhost 1)
+target_link_options(ble-midi2usbhost PRIVATE -Xlinker --print-memory-usage)
+target_compile_options(ble-midi2usbhost PRIVATE -Wall -Wextra)
+pico_btstack_make_gatt_header(ble-midi2usbhost PRIVATE "${CMAKE_CURRENT_LIST_DIR}/ble-midi2usbhost.gatt" "${CMAKE_CURRENT_LIST_DIR}/lib/pico-w-ble-midi-lib")
 
-pico_add_extra_outputs(${target_name})
+pico_add_extra_outputs(ble-midi2usbhost)
 
