Fix #3: Add support for Pico2 W board
Update the CMakeLists.txt file to support Pico2 W boards.

Update the documentation to answer concerns in issue #3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 3.13)
 set(target_name ble-midi2usbhost)
-set(PICO_BOARD pico_w)
+
+if(NOT DEFINED PICO_BOARD)
+if(DEFINED ENV{PICO_BOARD})
+    set(PICO_BOARD $ENV{PICO_BOARD})
+else()
+    set(PICO_BOARD pico_w)
+endif()
+endif()
 include (pico_sdk_import.cmake)
 project(ble-midi2usbhost)
 set(CMAKE_C_STANDARD 11)
